--- a/Day4/index.html
+++ b/Day4/index.html
@@ -9,11 +9,10 @@
 <body>
   <section>
     <p class="quotes">
-        "For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works
-        in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally."
+        "Genius is one percent inspiration, ninety-nine percent perspiration."
     </p>
 
-    <p class="author"><em>- John Gabriel</em></p>
+    <p class="author"><em>- Thomas A. Edison</em></p>
   </section>
 
   <script src="app.js"></script>
