Error Handling For Country Not Found

--- a/Day16/index.html
+++ b/Day16/index.html
@@ -27,10 +27,10 @@
         <p class="region"><strong>Middle Africa</strong></p>
         <p class="language"><strong>Language: </strong> Portuguese</p>
         <p class="population"><strong>Population:</strong>  24M</p>
-        <p class="area"><strong>Area: </strong> 1.2456KM</p>
-        <p class="currency"><strong>Currency: Angolan</strong>  Kwaza Kz</p>
+        <p class="area"><strong>Area: </strong> 1.2456KM²</p>
+        <p class="currency"><strong>Currency: </strong>Angolan  Kwaza Kz</p>
         <p class="world-bank-gini"><strong>World Bank Gini:</strong> 58.6%</p>
-        <p class="lat_lng"><strong>Lat Long: </strong>Lat: -12.5, Lng: 18.5</p>
+        <p class="lat_lng"><strong>Lat Long: </strong>Lat: -12.5°, Lng: 18.5°</p>
       </div>
     </div>
   </section>
